--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Kanit&display=swap');
 :root {
   --max-width: 1100px;
   --border-radius: 12px;
@@ -83,16 +84,12 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  background-color: #C0C0C0;
+  font-family: 'Kanit', sans-serif;
 }
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
 }
 
 a {
