--- a/styles/login.module.css
+++ b/styles/login.module.css
@@ -12,6 +12,18 @@
     align-items: center;
     justify-content: flex-start;
     background-color: #D9D9D9;
+    width: 40%;
+    height: 40vh;
+    border-radius: 30px;
+    margin-top: 190px;
+    gap: 30px;
+}
+.signup{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    background-color: #D9D9D9;
     width: 30%;
     height: 30vh;
     border-radius: 30px;
