--- a/styles/globals.css
+++ b/styles/globals.css
@@ -84,7 +84,7 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
-  background-color: #C0C0C0;
+  background-color: #e1d9d1;
   font-family: 'Kanit', sans-serif;
 }
 
