--- a/styles/header.module.css
+++ b/styles/header.module.css
@@ -4,19 +4,26 @@
     justify-content: center;
     flex-direction: row;
     width: 100%;
-    background-color: #C0C0C0;
+    background-color: #e1d9d1;
 }
 .header{
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
     flex-direction: row;
-    width: 50%;
-    background-color: #817f7f;
+    gap: 50px;
+    width: 100%;
+    background: linear-gradient(cyan, #b2ffff);
     border-bottom-left-radius: 30px;
     border-bottom-right-radius: 30px;
+    padding: 10px;
 }
 .res{
+    margin-left: 30px;
     color: #55A6F1;
     font-weight: bold;
     font-size: 32px;
+    transition: text-shadow 0.3s ease;
+}
+.res:hover{
+    text-shadow: 3px 3px black;
 }
