--- a/styles/login.module.css
+++ b/styles/login.module.css
@@ -1,7 +1,7 @@
 .main{
     display: flex;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
@@ -17,6 +17,7 @@
     border-radius: 30px;
     margin-top: 190px;
     gap: 30px;
+    box-shadow: 5px 7px black;
 }
 .signup{
     display: flex;
@@ -24,11 +25,12 @@
     align-items: center;
     justify-content: flex-start;
     background-color: #D9D9D9;
-    width: 30%;
-    height: 30vh;
+    width: 40%;
+    height: 40vh;
     border-radius: 30px;
     margin-top: 190px;
     gap: 30px;
+    box-shadow: 5px 7px black;
 }
 .content{
     display: flex;
@@ -51,8 +53,22 @@
     align-items: center;
     justify-content: center;
     color: #55A6F1;
+    border-radius: 15px;
 }
 .input::placeholder{
+    color: #55A6F1;
+}
+.inputmod{
+    background-color: white;
+    border: none;
+    width: 80%;
+    height: 10%;
+    align-items: center;
+    justify-content: center;
+    color: #55A6F1;
+    border-radius: 15px;
+}
+.inputmod::placeholder{
     color: #55A6F1;
 }
 .submit{
@@ -63,6 +79,17 @@
     width: 20%;
     height: 15%;
     margin-top: 25px;
+    border-radius: 30px;
+}
+.submitmod{
+    background-color: white;
+    color: #55A6F1;
+    font-weight: bold;
+    border: none;
+    width: 10%;
+    height: 10%;
+    margin-top: 25px;
+    border-radius: 30px;
 }
 .al{
     display: flex;
@@ -70,4 +97,24 @@
     flex-direction: column;
     justify-content: center;
     width: 80%;
+}
+.mod{
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    width: 45%;
+    height: 45%;
+    inset: 40px;
+    border: 1px solid rgb(204, 204, 204);
+    background: #D9D9D9;
+    overflow: auto;
+    border-radius: 4px;
+    outline: none;
+    padding: 20px;
+    color: black;
+    align-items: center;
+    justify-content: center;
+    transform: translate(60%, 45%);
+    gap: 40px;
+    border-radius: 40px;
 }
