--- a/styles/header.module.css
+++ b/styles/header.module.css
@@ -4,7 +4,7 @@
     justify-content: center;
     flex-direction: row;
     width: 100%;
-    background-color: #e1d9d1;
+    background-color: #d3e1d1;
 }
 .header{
     display: flex;
@@ -12,14 +12,14 @@
     flex-direction: row;
     gap: 50px;
     width: 100%;
-    background: linear-gradient(cyan, #b2ffff);
+    background: linear-gradient(rgb(78, 116, 78), rgb(113, 150, 113));
     border-bottom-left-radius: 30px;
     border-bottom-right-radius: 30px;
     padding: 10px;
 }
 .res{
     margin-left: 30px;
-    color: #55A6F1;
+    color: rgb(61, 108, 61) 241, 85);
     font-weight: bold;
     font-size: 32px;
     transition: text-shadow 0.3s ease;
