--- a/styles/create.module.css
+++ b/styles/create.module.css
@@ -28,8 +28,8 @@
     display: flex;
     background-color: white;
     border: none;
-    width: 80%;
-    height: 10%;
+    width: 100%;
+    height: 50%;
     align-items: center;
     justify-content: center;
     color: #55A6F1;
@@ -39,10 +39,60 @@
 .input::placeholder{
     color: #55A6F1;
 }
+.inputA{
+    display: flex;
+    background-color: white;
+    border: none;
+    align-items: center;
+    justify-content: center;
+    color: #55A6F1;
+    border-radius: 5px;
+}
+.inputA::placeholder{
+    color: #55A6F1;
+}
 .form{
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
+    align-items: center;
 }
 .fix{
     width: 50%;
+}.row{
+    display: flex;
+    flex-direction: row;
+}
+.button{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 10%;
+    height: 10%;
+    background: none;
+    border: none;
+    color: #55A6F1;
+    font-size: large;
+    font-weight: bold;
+    transition: text-shadow 0.3s ease;
+}
+.button:hover{
+    text-shadow: 2px 2px black;
+}
+.label{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    font-size: large;
+    color: #55A6F1;
+    font-weight: bold;
+    width: 60%;
+    height: 10%;
+}
+.labelA{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    font-size: large;
+    color: #55A6F1;
+    font-weight: bold;
 }
