--- a/styles/header.module.css
+++ b/styles/header.module.css
@@ -12,7 +12,7 @@
     flex-direction: row;
     gap: 50px;
     width: 100%;
-    background: linear-gradient(cyan, #b2ffff);
+    background: linear-gradient(#58d558, #8ce28c);
     border-bottom-left-radius: 30px;
     border-bottom-right-radius: 30px;
     padding: 10px;
