--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,20 +1,51 @@
 .main {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   align-items: center;
   min-height: 100vh;
+  font-size: 2rem;
+  color: black;
 }
 
 .description {
-  display: inherit;
-  justify-content: inherit;
-  align-items: inherit;
-  font-size: 0.85rem;
+  margin: 30px;
+  /* padding: 20px; */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  font-size: 0.560rem;
   max-width: var(--max-width);
   width: 100%;
   z-index: 2;
   font-family: var(--font-mono);
+  border-radius: 40px;
+background: #F2F2F2;
+}
+.description2 {
+  margin: 0px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  font-size: 0.560rem;
+  max-width: var(--max-width);
+  width: 100%;
+  z-index: 2;
+  font-family: var(--font-mono);
+  border-radius: 0px 0px 40px 40px;
+background: #9F9F9F;
+}
+
+.h1 {
+  padding: 20px;
+  margin: 20px;
+}
+.h2{
+  margin: 30px;
+  padding: 20px;
 }
 
 .description a {
