--- a/styles/login.module.css
+++ b/styles/login.module.css
@@ -44,6 +44,7 @@
 .subTitle{
     color: #55A6F1;
     font-size: xx-large;
+    cursor: default;
 }
 .input{
     background-color: white;
@@ -54,6 +55,7 @@
     justify-content: center;
     color: #55A6F1;
     border-radius: 15px;
+    padding: 10px;
 }
 .input::placeholder{
     color: #55A6F1;
@@ -71,6 +73,9 @@
 .inputmod::placeholder{
     color: #55A6F1;
 }
+.h1{
+    cursor: default;
+}
 .submit{
     background-color: white;
     color: #55A6F1;
@@ -80,6 +85,7 @@
     height: 15%;
     margin-top: 25px;
     border-radius: 30px;
+    cursor: pointer;
 }
 .submitmod{
     background-color: white;
@@ -90,6 +96,7 @@
     height: 10%;
     margin-top: 25px;
     border-radius: 30px;
+    cursor: pointer;
 }
 .al{
     display: flex;
@@ -117,4 +124,7 @@
     transform: translate(60%, 45%);
     gap: 40px;
     border-radius: 40px;
+}
+.point{
+    cursor: pointer;
 }
