--- a/styles/calendar.module.css
+++ b/styles/calendar.module.css
@@ -32,6 +32,7 @@
     border-top-right-radius: 10px;
     border-top-left-radius: 10px;
     width: 100%;
+    cursor: default;
 }
 .h2{
     display: flex;
@@ -43,6 +44,7 @@
     border-top-right-radius: 10px;
     border-top-left-radius: 10px;
     width: 100%;
+    cursor: default;
 }
 .h3{
     display: flex;
@@ -54,6 +56,7 @@
     border-top-right-radius: 10px;
     border-top-left-radius: 10px;
     width: 100%;
+    cursor: default;
 }
 .tasks{
     display: flex;
