--- a/styles/cal.module.css
+++ b/styles/cal.module.css
@@ -1,10 +1,14 @@
-.react-calendar {
-    width: 350px;
-    max-width: 100%;
-    background: white;
-    border: 1px solid #a0a096;
-    line-height: 1.125em;
-    padding: 10px;
-    margin-right: 500px;
-  }
-  
+.main{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+}
+.cal{
+  /* height: 50%;
+  width: 40%;
+  background-color: white;
+  border-radius: 30px;
+  color: black; */
+}
