--- a/styles/cal.module.css
+++ b/styles/cal.module.css
@@ -6,9 +6,9 @@
   height: 100%;
 }
 .cal{
-  /* height: 50%;
-  width: 40%;
+  height: 50%;
+  width: 100%;
   background-color: white;
   border-radius: 30px;
-  color: black; */
+  color: black;
 }
