--- a/styles/create.module.css
+++ b/styles/create.module.css
@@ -58,10 +58,12 @@
 }
 .fix{
     width: 50%;
-}.row{
+}
+.row{
     display: flex;
     width: 100%;
-    align-items: center;
+    height: 70vh;
+    align-items: flex-start;
     justify-content: space-evenly;
     flex-direction: row-reverse;
 }
