--- a/styles/globals.css
+++ b/styles/globals.css
@@ -104,9 +104,11 @@ a {
   padding: 4px;
   margin-top: 1px;
   z-index: 99999 !important;
-  background: black;
+  color: black !important;
+  background: white !important;
   box-shadow: 0 1px 3px rgba(0,0,0,.1);
   border: 1px solid #f9f9f9;
+  border-radius: 30px;
 }
 @media (prefers-color-scheme: dark) {
   html {
