--- a/styles/cal.module.css
+++ b/styles/cal.module.css
@@ -1,7 +1,7 @@
 .main{
   display: flex;
-  align-items: center;
-  justify-content: center;
+  align-items: flex-start;
+  justify-content: flex-start;
   width: 100%;
   height: 40vh;
 }
