--- a/styles/create.module.css
+++ b/styles/create.module.css
@@ -8,8 +8,8 @@
 .calc{
     display: flex;
     width: 90%;
-    height: 20vh;
-    align-items: flex-start;
+    height: 11vh;
+    align-items: flex-end;
     justify-content: center;
     padding: 20px;
     margin-right: 20px;
@@ -84,6 +84,16 @@
 .button:hover{
     text-shadow: 2px 2px black;
     box-shadow: 2px 2px black;
+}
+.labelCal{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    font-size: large;
+    color: #55A6F1;
+    font-weight: bold;
+    width: 50%;
+    height: 10%;
 }
 .label{
     display: flex;
