--- a/styles/create.module.css
+++ b/styles/create.module.css
@@ -183,3 +183,14 @@
     width: 0;
     height: 0;
   }
+.fixed{
+    width: 50%;
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    flex-direction: column;
+}
+.high{
+    font-size: large;
+    color: #55A6F1;
+}
