--- a/styles/cal.module.css
+++ b/styles/cal.module.css
@@ -13,3 +13,12 @@
   color: black;
   cursor: pointer;
 }
+@media only screen and (max-width: 900px){
+  .cal{
+    width: 40vw;
+  }
+  .main{
+    align-items: center;
+    justify-content: center;
+  }
+}
