--- a/styles/create.module.css
+++ b/styles/create.module.css
@@ -47,6 +47,8 @@
     justify-content: center;
     color: #55A6F1;
     border-radius: 5px;
+    width: 100%;
+    height: 5vh;
 }
 .inputA::placeholder{
     color: #55A6F1;
@@ -194,4 +196,34 @@
     font-size: large;
     color: #55A6F1;
     cursor: default;
+}
+@media only screen and (max-width: 900px){
+    .row{
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    .formatting{
+        align-items: center;
+        justify-content: center;
+        gap: 40px;
+    }
+    .calc{
+        align-items: flex-end;
+        width: 100%;
+    }
+    .fix{
+        display: flex;
+        width: 70%;
+        align-items: flex-end;
+        justify-content: center;
+    }
+    .labelCal{
+        width: 100%;
+        align-items: center;
+        justify-content: center;
+    }
+    .button{
+        width: 40%;
+    }
 }
