--- a/styles/header.module.css
+++ b/styles/header.module.css
@@ -28,3 +28,15 @@
 .res:hover{
     text-shadow: 3px 3px black;
 }
+@media only screen and (max-width: 900px){
+    .header{
+        flex-direction: column;
+        gap: 10px;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+    }
+    .res{
+        font-size: 24px;
+    }
+}
