--- a/styles/login.module.css
+++ b/styles/login.module.css
@@ -129,3 +129,22 @@
 .point{
     cursor: pointer;
 }
+@media only screen and (max-width: 900px){
+    .login{
+        width: 90%;
+        margin-top: 30px;
+        height: 45%;
+    }
+    .signup{
+        width: 90%;
+        margin-top: 30px;
+        height: 45%;
+    }
+    .mod{
+        width: 80%;
+        position: unset;
+        padding: 0px;
+        inset: 0px;
+        transform: translate(15%, 50%);
+    }
+}
