--- a/styles/calendar.module.css
+++ b/styles/calendar.module.css
@@ -11,6 +11,16 @@
     width: 100%;
     height: 70%;
 }
+
+.completed {
+    margin: 10px;
+    padding: 3px;
+    display:flex;
+    cursor:pointer;
+    border-radius: 5px;
+    background-color: green;
+}
+
 .req{
     display: flex;
     border: 3px solid black;
