--- a/styles/cal.module.css
+++ b/styles/cal.module.css
@@ -1,9 +1,8 @@
 .main{
   display: flex;
-  align-items: flex-start;
-  justify-content: flex-start;
-  width: 100%;
-  height: 40vh;
+  align-items: center;
+  justify-content: center;
+  width: 70%;
 }
 .cal{
   height: 50%;
@@ -12,10 +11,12 @@
   border-radius: 30px;
   color: black;
   cursor: pointer;
+  border: none;
+  padding: 5px;
 }
 @media only screen and (max-width: 900px){
   .cal{
-    width: 40vw;
+    width: 43vw;
   }
   .main{
     align-items: center;
