--- a/styles/create.module.css
+++ b/styles/create.module.css
@@ -7,20 +7,19 @@
 }
 .calc{
     display: flex;
-    width: 90%;
+    width: 100%;
     height: 11vh;
-    align-items: flex-end;
+    align-items: center;
     justify-content: center;
     padding: 20px;
-    margin-right: 20px;
 }
 .formatting{
     display: flex;
     flex-direction: column;
     width: 50%;
-    justify-content: flex-start;
-    align-items: flex-end;
-    gap: 80px;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
     padding: 10px;
     margin-top: 80px;
 }
@@ -28,8 +27,8 @@
     display: flex;
     background-color: white;
     border: none;
-    width: 95%;
-    height: 50%;
+    width: 80%;
+    height: 80%;
     align-items: center;
     justify-content: center;
     color: #55A6F1;
@@ -46,41 +45,49 @@
     align-items: center;
     justify-content: center;
     color: #55A6F1;
-    border-radius: 5px;
+    border-radius: 20px;
     width: 100%;
-    height: 5vh;
+    height: 30%;
+    padding: 5px;
 }
 .inputA::placeholder{
     color: #55A6F1;
 }
+.inputA::-webkit-scrollbar {
+    display: none;
+  }
 .form{
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 .fix{
-    width: 50%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .row{
     display: flex;
     width: 100%;
-    height: 70vh;
-    align-items: flex-start;
-    justify-content: space-evenly;
-    flex-direction: row-reverse;
+    height: 50vh;
+    flex-direction: column-reverse;
+    align-items: center;
+    justify-content: center;
 }
 .button{
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 7%;
-    height: 10%;
+    width: 9%;
+    padding: 8px;
     background: white;
     border-radius: 30px;
     border: none;
     color: #55A6F1;
     font-size: large;
     font-weight: bold;
+    margin-top: 35px;
     transition: text-shadow 0.3s ease, box-shadow 0.3s ease;
 }
 .button:hover{
@@ -90,31 +97,39 @@
 .labelCal{
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
+    justify-content: center;
     font-size: large;
     color: #55A6F1;
     font-weight: bold;
-    width: 50%;
+    gap: 30px;
+    width: 100%;
     height: 10%;
+    padding: 10px;
 }
 .label{
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
+    justify-content: flex-end;
     font-size: large;
     color: #55A6F1;
     font-weight: bold;
-    width: 50%;
+    gap: 15px;
+    width: 70%;
     height: 10%;
+    padding: 10px;
 }
 .labelA{
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
-    width: 50%;
+    align-items: center;
+    width: 55%;
+    gap: 15px;
     font-size: large;
     color: #55A6F1;
     font-weight: bold;
+    padding: 10px;
 }
 .labelC{
     display: flex;
@@ -186,36 +201,49 @@
     height: 0;
   }
 .fixed{
-    width: 50%;
     display: flex;
-    align-items: flex-start;
+    align-items: center;
     justify-content: center;
     flex-direction: column;
+    gap: 10px;
 }
 .high{
     font-size: large;
     color: #55A6F1;
     cursor: default;
 }
+.sas{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+    gap: 20px;
+
+}
 @media only screen and (max-width: 900px){
     .row{
         flex-direction: column;
         align-items: center;
         justify-content: center;
+        margin-top: 40px;
     }
     .formatting{
         align-items: center;
         justify-content: center;
-        gap: 40px;
+        gap: 25px;
+        width: 100%;
+        margin-top: 10px;
     }
     .calc{
         align-items: flex-end;
-        width: 100%;
+        width: 50%;
+        margin-right: 0px;
     }
     .fix{
         display: flex;
-        width: 70%;
-        align-items: flex-end;
+        width: 100%;
+        align-items: center;
         justify-content: center;
     }
     .labelCal{
@@ -225,5 +253,32 @@
     }
     .button{
         width: 40%;
+    }
+    .label{
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 10px;
+    }
+    .labelA{
+        width: 80%;
+        height: 26%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 10px;
+    }
+    .fixed{
+        width: 100%;
+        align-items: center;
+        justify-content: center;
+        padding: 10px;
+    }
+    .form{
+        gap: 15px;
+    }
+    .sas{
+        flex-direction: column;
     }
 }
