--- a/styles/globals.css
+++ b/styles/globals.css
@@ -110,6 +110,15 @@ a {
   border: 1px solid #f9f9f9;
   border-radius: 30px;
 }
+.rtd{
+  width: 100% !important;
+  border: none;
+}
+@media only screen and (max-width: 900px){
+  .rdtPicker{
+    transform: translateX(-50px);
+  }
+}
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
