--- a/styles/calendar.module.css
+++ b/styles/calendar.module.css
@@ -128,6 +128,7 @@
     align-items: center;
     justify-content: center;
     border-bottom: 3px solid black;
+    word-break: break-all;
     padding: 10px;
     width: 100%;
 }
