--- a/styles/calendar.module.css
+++ b/styles/calendar.module.css
@@ -156,6 +156,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    word-break: break-all;
     border-bottom: 3px solid black;
     padding: 10px;
     width: 100%;
