--- a/styles/task.module.css
+++ b/styles/task.module.css
@@ -37,3 +37,11 @@
 .desc1{
     font-size: larger;
 }
+@media only screen and (max-width: 900px){
+    .description{
+        word-break: break-all;
+        width: 90%;
+        height: 40%;
+        padding: 10px;
+    }
+}
