--- a/styles/task.module.css
+++ b/styles/task.module.css
@@ -37,11 +37,56 @@
 .desc1{
     font-size: larger;
 }
+
+.grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 20px;
+    width: 100%;
+    /* height: 100%; */
+    padding: 10px;
+    /* align-items: center; */
+    justify-content: center;
+    grid-gap: 10px;
+    gap: 10px;
+    margin: auto;
+    align-content: space-between;
+
+}
+
 @media only screen and (max-width: 900px){
     .description{
         word-break: break-all;
-        width: 90%;
-        height: 40%;
         padding: 10px;
     }
+    .grid{
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        grid-gap: 10px;
+        width: 100%;
+        height: 30vh;
+        padding: 10px;
+        align-items: center;
+        justify-content: center;
+        gap: 10px;
+    }
+    .description1{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        gap: 15px;
+    }
+    .title{
+        font-size: x-large !important;
+        font-weight: bolder;
+    }
+    .desc{
+        font-size: large;
+        font-weight: bold;
+    }
+    .desc1{
+        font-size: medium;
+    }
+
 }
