--- a/styles/cal.module.css
+++ b/styles/cal.module.css
@@ -2,17 +2,26 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 70%;
+  width: 100%;
+  height: 100%;
 }
 .cal{
-  height: 50%;
-  width: 100%;
+  height: 100%;
+  width: 98%;
   background-color: white;
   border-radius: 30px;
   color: black;
   cursor: pointer;
   border: none;
   padding: 5px;
+  text-align: center;
+}
+.calWrapper{
+  width: 100%;
+  height: 75%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 @media only screen and (max-width: 900px){
   .cal{
