--- a/styles/create.module.css
+++ b/styles/create.module.css
@@ -3,7 +3,19 @@
     flex-direction: column;
     width: 100%;
     height: 100vh;
-
+    align-items: center;
+}
+.description{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    background-color: #D9D9D9;
+    margin-top: 30px;
+    width: 50%;
+    border-radius: 30px;
+    box-shadow: 5px 7px black;
+    padding: 20px;
 }
 .calc{
     display: flex;
@@ -11,24 +23,23 @@
     height: 11vh;
     align-items: center;
     justify-content: center;
-    padding: 20px;
 }
 .formatting{
     display: flex;
     flex-direction: column;
-    width: 50%;
+    width: 100%;
+    height: 100%;
     justify-content: center;
     align-items: center;
     gap: 20px;
-    padding: 10px;
-    margin-top: 80px;
+    padding: 20px;
 }
 .input{
     display: flex;
     background-color: white;
     border: none;
-    width: 80%;
-    height: 80%;
+    width: 100%;
+    height: 100%;
     align-items: center;
     justify-content: center;
     color: #55A6F1;
@@ -47,7 +58,7 @@
     color: #55A6F1;
     border-radius: 20px;
     width: 100%;
-    height: 30%;
+    height: 40%;
     padding: 5px;
 }
 .inputA::placeholder{
@@ -59,6 +70,7 @@
 .form{
     display: flex;
     flex-direction: column;
+    width: 70%;
     align-items: center;
 }
 .fix{
@@ -79,7 +91,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 9%;
+    width: 35%;
     padding: 8px;
     background: white;
     border-radius: 30px;
@@ -104,8 +116,7 @@
     font-weight: bold;
     gap: 30px;
     width: 100%;
-    height: 10%;
-    padding: 10px;
+    height: 100%;
 }
 .label{
     display: flex;
@@ -116,15 +127,14 @@
     color: #55A6F1;
     font-weight: bold;
     gap: 15px;
-    width: 70%;
-    height: 10%;
+    width: 100%;
     padding: 10px;
 }
 .labelA{
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 55%;
+    width: 100%;
     gap: 15px;
     font-size: large;
     color: #55A6F1;
@@ -227,6 +237,10 @@
         align-items: center;
         justify-content: center;
         margin-top: 40px;
+    }
+    .description{
+        margin-top: 15px;
+        height: 85%;
     }
     .formatting{
         align-items: center;
