--- a/styles/globals.css
+++ b/styles/globals.css
@@ -110,9 +110,14 @@ a {
   border: 1px solid #f9f9f9;
   border-radius: 30px;
 }
-.rtd{
-  width: 100% !important;
+.rdt{
+  width: 100%;
+  height: 100%;
   border: none;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  display: flex;
 }
 @media only screen and (max-width: 900px){
   .rdtPicker{
